@@ -46,6 +46,8 @@
 #define DVT_DEFAULT_MYSQL_USERNAME "dvtuser"
 #define DVT_DEFAULT_MYSQL_PASSWORD "letmein"
 #define DVT_DEFAULT_MYSQL_DBTYPE "QMYSQL"
+#define DVT_DEFAULT_MYSQL_CONNECTION_TIMEOUT 10
+#define DVT_DEFAULT_WIREGUARD_CONNECTION_PRIORITY "LocalOnly"
 
 //
 // Default User Name
