@@ -31,6 +31,8 @@
 class DvtConfig
 {
  public:
+  enum ConnectionPriority {LocalOnly=0,LocalFirst=1,VpnFirst=2,
+    ConnectionLast=3};
   DvtConfig();
   DvtConfig(QString filename);
   QString filename() const;
@@ -47,10 +49,12 @@ class DvtConfig
   int fontLabelSize() const;
   int fontDefaultSize() const;
   QString contactAddress() const;
-  QStringList wireguardConfigurations() const;
+  QString wireguardConfiguration() const;
+  DvtConfig::ConnectionPriority wireguardConnectionPriority() const;
   void dumpConfig(FILE *stream);
   bool load(DvtCmdSwitch *cmd);
   void clear();
+  static QString connectionPriorityText(DvtConfig::ConnectionPriority prio);
 
  private:
   QString conf_filename;
@@ -66,7 +70,8 @@ class DvtConfig
   int conf_font_label_size;
   int conf_font_default_size;
   QString conf_contact_address;
-  QStringList conf_wireguard_configurations;
+  QString conf_wireguard_configuration;
+  DvtConfig::ConnectionPriority conf_wireguard_connection_priority;
 };
 
 
